--- a/css/index.css
+++ b/css/index.css
@@ -67,8 +67,9 @@ body {
 .container .video-container .video-title {
 	position: absolute;
 	color: var(--white);
-	inset-block-start: 1rem;
-	inset-inline-start: 2rem;
+	inset-block-start: .8rem;
+	inset-inline-start: .6rem;
+	font-size: .8rem;
 }
 .container .video-container .video-actions {
 	position: absolute;
@@ -79,8 +80,8 @@ body {
 	gap: 1.5rem;
 }
 .container .video-container .video-actions .video-button {
-	inline-size: 2.1rem;
-	block-size: 2.1rem;
+	inline-size: 1.85rem;
+	block-size: 1.85rem;
 	border: none;
 	cursor: pointer;
 	border-radius: 50%;
@@ -107,10 +108,13 @@ body {
 	inset-inline: 0;
 	display: flex;
 	padding: 0.5rem 1rem;
+
 }
 .video-progress #progress {
 	flex: 1;
+	height: .3rem;
 	cursor: pointer;
+	border-radius: .3rem; ;
 }
 .video-container video {
 	width: 100%;
@@ -256,6 +260,21 @@ body {
 	.video-container video {
 		width: 100%;
 		height: 100%;
+	}
+	.container .video-container .video-title {
+		inset-block-start: 1rem;
+		inset-inline-start: 1.5rem;
+		font-size: 1.5rem;
+	}
+	.container .video-container .video-actions .video-button {
+		inline-size: 2.1rem;
+		block-size: 2.1rem;
+	}
+	.video-progress #progress {
+		flex: 1;
+		height: .6rem;
+	
+		border-radius: .6rem; ;
 	}
 
 	.container .playlist-container {
